# social_datathon

./: Datathon_Geo.ipynb  SOC2.ipynb  TTWA_Data.xls  data_exploration.ipynb  data_explorationSB.ipynb  greenjobs.ipynb  lightcast_skills_trends.ipynb  lightcast_skills_trends_proper.ipynb  pyproject.toml  remote.ipynb  sb.ipynb  simple_analysis.py
.ipynb_checkpoints/: data_exploration-checkpoint.ipynb  lightcast_skills_trends-Copy1-checkpoint.ipynb  lightcast_skills_trends-checkpoint.ipynb  lightcast_skills_trends_proper-checkpoint.ipynb
Shapefiles/: Travel_to_Work_Areas_(Dec_2011)_SGCB_in_United_Kingdom.dbf  Travel_to_Work_Areas_(Dec_2011)_SGCB_in_United_Kingdom.shp  Travel_to_Work_Areas_(Dec_2011)_SGCB_in_United_Kingdom.shx  Travel_to_Work_Areas_(Dec_2011)_SGCB_in_United_Kingdom.xml
